correction of np.dot

--- a/01-homework/homework1.ipynb
+++ b/01-homework/homework1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "1726d535-d1e5-436d-a0ca-8deb9ce042f4",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "0afbd0a9-1c31-4e86-b6bc-1bdc9dc4dea3",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "94fb997a-e4af-4a74-930a-b75266cde6dd",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "1e202ae5-7341-455a-bd47-95b338f88db2",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "'2.3.1'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "40160fef-28cb-463f-a885-147327eb5904",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "9704"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "8e0fc8a2-54d3-4840-a4af-56e3b7e157dc",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "Name: fuel_type, dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "b19269dc-df80-46f1-b42c-4a9c4a36caf6",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "9eac1c3c-b495-42d7-bfab-251c6787604d",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "np.float64(23.759122836520497)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "id": "7347f56a-ecad-44c8-be28-4376f5c6a112",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "np.float64(149.0)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "cc6f391a-7542-4e98-8168-611cfd8e0a68",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
        "Name: horsepower, dtype: float64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "id": "67b19919-c37b-4e18-b38c-5cdcdea67b29",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "Name: horsepower, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "id": "559e6724-95c8-4a46-9e0d-df7d0a3b79b4",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_16243/3630679543.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_60548/3630679543.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "id": "4fef6544-7143-481f-96bd-f44ac1189029",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "np.float64(152.0)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "d96a39a0-444e-4a42-9ed9-6875f1917b6a",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "8db37c01-cf36-4dae-8849-adf431032485",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
        "21            16.077730  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "id": "f2177c4a-9ddf-496b-9e02-78573f0f0c55",
    "metadata": {},
    "outputs": [],
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "id": "fd6f7671-e5f9-4031-a790-d68914d698dd",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
        "21     2659.431451        2016"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,17 +658,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "id": "2b7113d4-9247-4f53-8749-c79d6bb1956a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x=cars_asia_filtered[0:7].to_numpy()"
+    "x=cars_asia_filtered.head(7).to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "id": "91187fad-46c3-4751-a825-f752fd8bfa0e",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
        "       [3761.99403819, 2019.        ]])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "id": "9cef52e0-8372-40f6-bdff-fc407aad1bfa",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
        "        2016.        , 2014.        , 2019.        ]])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,28 +719,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "id": "986048d7-8a51-49c1-929b-471e39234f27",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "XTX= np.dot(x, x.T)"
+    "XTX= np.dot(x.T, x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "id": "944c8db4-e069-4d57-bcc5-a1fe6a8b288c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7, 7)"
+       "(2, 2)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "id": "afc0947b-b878-40bf-b678-51a2c641a888",
    "metadata": {},
    "outputs": [],
@@ -761,37 +761,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "id": "917be13c-e2a1-4028-b53f-32caf24c5c10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.40662244e+08, -8.18480683e+07, -1.03428022e+08,\n",
-       "        -1.71670448e+08,  2.73403363e+08, -2.15404296e+08,\n",
-       "         5.68558288e+07],\n",
-       "       [ 3.07315072e+08,  8.15201613e+08, -3.50733988e+08,\n",
-       "        -6.67483762e+08,  2.18148252e+07, -6.76280250e+07,\n",
-       "        -5.92596904e+07],\n",
-       "       [-4.86723629e+08, -1.99324915e+08,  1.63505427e+08,\n",
-       "         5.91302899e+08, -1.29792968e+08, -8.84952053e+07,\n",
-       "         1.50819395e+08],\n",
-       "       [-3.32348660e+08, -1.88087428e+08,  3.67957445e+08,\n",
-       "         5.29729004e+08, -1.66174330e+08, -1.66174330e+08,\n",
-       "        -4.26064585e+07],\n",
-       "       [ 1.78956971e+08, -1.78956971e+08, -1.78956971e+08,\n",
-       "        -7.60349662e+07, -1.78956971e+08,  3.57913941e+08,\n",
-       "         7.47586876e+07],\n",
-       "       [-1.78956971e+08, -2.04522252e+08,  6.39132038e+07,\n",
-       "         9.37744128e+06,  1.78956971e+08,  1.78956971e+08,\n",
-       "        -4.77768432e+07],\n",
-       "       [ 2.68435456e+08,  3.83479223e+07,  3.83479223e+07,\n",
-       "        -2.12927011e+08,  0.00000000e+00,  0.00000000e+00,\n",
-       "        -1.32250255e+08]])"
+       "array([[ 5.71497081e-07, -8.34509443e-07],\n",
+       "       [-8.34509443e-07,  1.25380877e-06]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 38,
    "id": "da2efe58-f35d-484e-94d3-475c38037c40",
    "metadata": {},
    "outputs": [],
@@ -812,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "id": "23148e98-1ef8-403d-8bc5-1433cafd6fcd",
    "metadata": {},
    "outputs": [
@@ -822,7 +803,7 @@
        "array([1100, 1300,  800,  900, 1000, 1100, 1200])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,27 +814,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 41,
    "id": "7c43b62a-a4ef-43ee-bb1c-837ff0e8d6c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x= np.dot(np.dot(x.T, XTX_inv),y)"
+    "x= np.dot(np.dot(XTX_inv, x.T),y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "id": "3968eb6b-76d6-4dfd-bfdb-1be963ff8960",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.50695184, -0.11579692])"
+       "array([0.01386421, 0.5049067 ])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,19 +845,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "76d87d92",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50ae7692",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.5187709081074016)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.sum()"
+   ]
   }
  ],
  "metadata": {
