--- a/02-homework/homework02.ipynb
+++ b/02-homework/homework02.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "c598c3d8",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "ac420623",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "id": "8b48cb34",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "id": "e99b697c",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "id": "8eab679a",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "87a0ef78",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "<Axes: xlabel='fuel_efficiency_mpg', ylabel='Count'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "a1e07a44",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "faa3b022",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "np.float64(149.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "id": "160ffec9",
    "metadata": {},
    "outputs": [],
@@ -397,27 +397,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "id": "c0507542",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "idx=np.arange(n)\n",
+    "np.random.seed(42)\n",
     "np.random.shuffle(idx)\n",
     "\n",
-    "df_train = df.iloc[idx[n_train:]]\n",
+    "df_train = df.iloc[idx[:n_train]]\n",
     "df_val = df.iloc[idx[n_train:n_train+n_val]]\n",
     "df_test = df.iloc[idx[n_train+n_val:]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "483a92da",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_train = df.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "eda372b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#np.log1p(df_train.fuel_efficiency_mpg.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "6680da99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train=df_train.fuel_efficiency_mpg.values\n",
+    "y_val=df_val.fuel_efficiency_mpg.values\n",
+    "y_test =df_test.fuel_efficiency_mpg.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f1285165",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del df_train['fuel_efficiency_mpg']\n",
+    "del df_val['fuel_efficiency_mpg']\n",
+    "del df_test['fuel_efficiency_mpg']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61a39c83",
+   "metadata": {},
+   "source": [
+    "Linear regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "696df30d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_regression(xi):\n",
+    "    n=len(xi)\n",
+    "    pred=w0\n",
+    "    for j in range(n):\n",
+    "        pred=pred + w[j]+xi[j]\n",
+    "    return pred "
+   ]
   }
  ],
  "metadata": {
