2nd_homework_final

--- a/02-homework/homework02.ipynb
+++ b/02-homework/homework02.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "c598c3d8",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "ac420623",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "8b48cb34",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "e99b697c",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "8eab679a",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "87a0ef78",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "<Axes: xlabel='fuel_efficiency_mpg', ylabel='Count'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "a1e07a44",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "faa3b022",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "np.float64(149.0)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "160ffec9",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "c0507542",
    "metadata": {},
    "outputs": [],
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "483a92da",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "eda372b6",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "6680da99",
    "metadata": {},
    "outputs": [],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "f1285165",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "696df30d",
    "metadata": {},
    "outputs": [],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "40e7492c",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "(np.float64(nan), array([nan, nan, nan, nan]))"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "82973eab",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "72418fa4",
    "metadata": {},
    "outputs": [],
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "1ad3b882",
    "metadata": {},
    "outputs": [],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "5aec3ec4",
    "metadata": {},
    "outputs": [],
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "e56cf19b",
    "metadata": {},
    "outputs": [
@@ -590,7 +590,7 @@
        "<Axes: ylabel='Count'>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "id": "f5b6e374",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
        "np.float64(0.5202614265099076)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "id": "6ec5192c",
    "metadata": {},
    "outputs": [
@@ -651,7 +651,7 @@
        "np.float64(0.52)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "id": "69b723df",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "id": "2f1de490",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
        "<Axes: ylabel='Count'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "id": "2f59f4d5",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
        "np.float64(0.6248117960544057)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "id": "9c455657",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,7 @@
        "np.float64(0.46)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "id": "52918f6e",
    "metadata": {},
    "outputs": [],
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "id": "437ef241",
    "metadata": {},
    "outputs": [
@@ -798,13 +798,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0 / 0.517\n",
-      "0.01 / 0.517\n",
-      "0.1 / 0.519\n",
-      "1 / 0.522\n",
-      "5 / 0.523\n",
-      "10 / 0.523\n",
-      "100 / 0.523\n"
+      "0.0 28.827365475106156 0.517\n",
+      "0.01 24.92683842008767 0.517\n",
+      "0.1 11.239661084961272 0.519\n",
+      "1 1.7315979411936366 0.522\n",
+      "5 0.3638075020692219 0.523\n",
+      "10 0.18306246622306527 0.523\n",
+      "100 0.018418017306977234 0.523\n"
      ]
     }
    ],
@@ -819,7 +819,255 @@
     "    df_val_0= df_val.fillna(0)\n",
     "    y_pred_v= w0+df_val_0.dot(w)\n",
     "    rmse_value= round(rmse(y_val, y_pred_v),3)\n",
-    "    print(r, '/', rmse_value)"
+    "    print(r, w0, rmse_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7dd05ddc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_full_train = pd.concat([df_train, df_val])\n",
+    "df_full_train= df_full_train.reset_index(drop= True)\n",
+    "X_full_train = df_full_train.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a9e63869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_full_train = np.concatenate([y_train, y_val])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e51cff41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w0, w= train_linear_regression_reg(X_full_train.values, y_full_train, r=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8d864022",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.645272806104025 0.517\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_test= df_test.fillna(0)\n",
+    "y_pred= w0+X_test.dot(w)\n",
+    "rmse_value= round(rmse(y_test, y_pred),3)\n",
+    "print(w0, rmse_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a8366909",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(seed, df_filtered):\n",
+    "    print(seed)\n",
+    "    n= len(df_filtered)\n",
+    "    n_val= int(len(df_filtered)*0.2)\n",
+    "    n_test = int(len(df_filtered)*0.2)\n",
+    "    n_train= n-n_val-n_test\n",
+    "       \n",
+    "    idx=np.arange(n)\n",
+    "    np.random.seed(seed)\n",
+    "    np.random.shuffle(idx)\n",
+    "\n",
+    "    df_train = df_filtered.iloc[idx[:n_train]]\n",
+    "    df_val = df_filtered.iloc[idx[n_train:n_train+n_val]]\n",
+    "    df_test = df_filtered.iloc[idx[n_train+n_val:]]\n",
+    "    \n",
+    "    y_train=df_train.fuel_efficiency_mpg.values\n",
+    "    y_val=df_val.fuel_efficiency_mpg.values\n",
+    "    y_test =df_test.fuel_efficiency_mpg.values\n",
+    "    \n",
+    "    del df_train['fuel_efficiency_mpg']\n",
+    "    del df_val['fuel_efficiency_mpg']\n",
+    "    del df_test['fuel_efficiency_mpg']\n",
+    "    \n",
+    "    df_train_0= df_train.fillna(0)\n",
+    "    w0, w= train_linear_regression(df_train_0.values, y_train)\n",
+    "    y_pred = w0 + df_train_0.dot(w)\n",
+    "    print(\"Score train: \",rmse(y_train, y_pred))\n",
+    "\n",
+    "    df_val_0= df_val.fillna(0)\n",
+    "    y_pred_v= w0+df_val_0.dot(w)\n",
+    "    rmse_value= round(rmse(y_val, y_pred_v),3)\n",
+    "    print(\"score validation: \", rmse_value)\n",
+    "    return rmse_value\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "1335943e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Score train:  0.5171560913636251\n",
+      "score validation:  0.521\n",
+      "1\n",
+      "Score train:  0.5148529296311273\n",
+      "score validation:  0.521\n",
+      "2\n",
+      "Score train:  0.520558311480986\n",
+      "score validation:  0.523\n",
+      "3\n",
+      "Score train:  0.5198664820191077\n",
+      "score validation:  0.516\n",
+      "4\n",
+      "Score train:  0.5171675510792179\n",
+      "score validation:  0.511\n",
+      "5\n",
+      "Score train:  0.5195177528194667\n",
+      "score validation:  0.528\n",
+      "6\n",
+      "Score train:  0.5124114964022372\n",
+      "score validation:  0.531\n",
+      "7\n",
+      "Score train:  0.524763629954572\n",
+      "score validation:  0.509\n",
+      "8\n",
+      "Score train:  0.524306385184493\n",
+      "score validation:  0.515\n",
+      "9\n",
+      "Score train:  0.5219709782195826\n",
+      "score validation:  0.513\n",
+      "[np.float64(0.521), np.float64(0.521), np.float64(0.523), np.float64(0.516), np.float64(0.511), np.float64(0.528), np.float64(0.531), np.float64(0.509), np.float64(0.515), np.float64(0.513)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed_list= [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "score_list = []\n",
+    "for seed in seed_list:\n",
+    "    score = train_model(seed, df_filtered)\n",
+    "    score_list.append(score)\n",
+    "\n",
+    "print(score_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "8a07bc18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.007)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(np.std(score_list),3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "e3e5d048",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "Score train:  0.5219709782195826\n",
+      "score validation:  0.513\n",
+      "score test:  0.516\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.516)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def train_model(seed):\n",
+    "    print(seed)\n",
+    "    n= len(df_filtered)\n",
+    "    n_val= int(len(df_filtered)*0.2)\n",
+    "    n_test = int(len(df_filtered)*0.2)\n",
+    "    n_train= n-n_val-n_test\n",
+    "       \n",
+    "    idx=np.arange(n)\n",
+    "    np.random.seed(seed)\n",
+    "    np.random.shuffle(idx)\n",
+    "\n",
+    "    df_train = df_filtered.iloc[idx[:n_train]]\n",
+    "    df_val = df_filtered.iloc[idx[n_train:n_train+n_val]]\n",
+    "    df_test = df_filtered.iloc[idx[n_train+n_val:]]\n",
+    "    \n",
+    "    y_train=df_train.fuel_efficiency_mpg.values\n",
+    "    y_val=df_val.fuel_efficiency_mpg.values\n",
+    "    y_test =df_test.fuel_efficiency_mpg.values\n",
+    "    \n",
+    "    del df_train['fuel_efficiency_mpg']\n",
+    "    del df_val['fuel_efficiency_mpg']\n",
+    "    del df_test['fuel_efficiency_mpg']\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    df_train_0= df_train.fillna(0)\n",
+    "    w0, w= train_linear_regression(df_train_0.values, y_train)\n",
+    "    y_pred = w0 + df_train_0.dot(w)\n",
+    "    print(\"Score train: \",rmse(y_train, y_pred))\n",
+    "\n",
+    "    df_val_0= df_val.fillna(0)\n",
+    "    y_pred_v= w0+df_val_0.dot(w)\n",
+    "    rmse_value= round(rmse(y_val, y_pred_v),3)\n",
+    "    print(\"score validation: \", rmse_value)\n",
+    "\n",
+    "    df_full_train = pd.concat([df_train, df_val])\n",
+    "    df_full_train= df_full_train.reset_index(drop= True)\n",
+    "    X_full_train = df_full_train.fillna(0)\n",
+    "    y_full_train = np.concatenate([y_train, y_val])\n",
+    "    w0, w= train_linear_regression_reg(X_full_train.values, y_full_train, r=0.001)\n",
+    "    X_test= df_test.fillna(0)\n",
+    "    y_pred= w0+X_test.dot(w)\n",
+    "    rmse_value= round(rmse(y_test, y_pred),3)\n",
+    "    print(\"score test: \", rmse_value)\n",
+    "    return rmse_value\n",
+    "\n",
+    "train_model(seed=9)"
    ]
   }
  ],
